--- a/content/projects/RP2040.md
+++ b/content/projects/RP2040.md
@@ -6,3 +6,5 @@ icon: "flag"
 
 Link to project: [RP2040_Dev_Board](https://github.com/DhruvaG2000/RP2040_Dev_Board)
 
+{{< image "https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/picoDevR0_may16_3D.png" fit >}}
+
